--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -8,7 +8,7 @@ on:
 
 env:
   TF_VERSION: "1.5.1" 
-  TF_ACTION_WORKING_DIR: "./IAC" # specify the path to your Terraform directory
+  TF_ACTION_WORKING_DIR: "./IAC/" # specify the path to your Terraform directory
 
 jobs:
   deploy:
