--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -8,11 +8,15 @@ on:
 
 env:
   TF_VERSION: "1.5.1" 
-  TF_ACTION_WORKING_DIR: "./IAC/" # specify the path to your Terraform directory
+  TF_ACTION_WORKING_DIR: "./IAC/"
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    defaults:
+     run:
+       shell: bash
+       working-directory: ./IAC
     steps:
     - name: Checkout
       uses: actions/checkout@v2
