--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
         "react-is-visible": "^1.1.2",
         "react-reveal": "^1.2.2",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.1",
+        "react-scripts": "^5.0.1",
         "react-scroll": "^1.8.3",
         "react-tsparticles": "^2.3.3",
         "react-vertical-timeline-component": "^3.5.2",
@@ -52,6 +52,7 @@
         ]
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "nodemon": "^2.0.12"
     }
 }
