--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -59,15 +59,19 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Setup Node.js for React App
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v3
       with:
-        node-version: '14'
+        node-version: '20.1.0'
 
-    - name: Install and Build React App
-      run: |
-        npm install
-        npm run build
-
+    - name: Run install
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: install 
+          
+    - name: Build production bundle
+            uses: borales/actions-yarn@v4
+            with:
+              cmd: build
         
     - name: Upload to Azure Blob Storage
       uses: azure/CLI@v1.0.7
