CI=false -> warnings are not errors anymore

--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -50,6 +50,8 @@ jobs:
   build-and-deploy-frontend:
     needs: deploy-IAC
     runs-on: ubuntu-latest
+    env:
+      CI: false
     defaults:
       run:
         shell: bash
