--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -85,4 +85,5 @@ jobs:
         AZURE_STORAGE_CONNECTION_STRING: ${{ env.CONNECTION_STRING }}
       with:
         inlineScript: |
+          echo "Connection string: $AZURE_STORAGE_CONNECTION_STRING"
           az storage blob upload-batch --account-name mbcrcstorage -s ./frontend/build -d '$web'
