--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -46,7 +46,8 @@ jobs:
       id: terraform
       run: |
        terraform apply -auto-approve
-       terraform output -raw connection_string >> $GITHUB_ENV
+       echo "CONNECTION_STRING=$(terraform output -raw connection_string)" >> $GITHUB_ENV
+       terraform output -raw connection_string
 
     outputs:
       connection_string: ${{ env.CONNECTION_STRING }}
