--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -53,7 +53,7 @@ jobs:
       id: terraform
       run: |
        terraform apply -auto-approve
-       echo "CONNECTION_STRING=$(terraform output -raw connection_string)" >> $GITHUB_ENV
+       echo "CONNECTION_STRING=$(echo a)" >> $GITHUB_ENV
        terraform output -raw connection_string
 
   build-and-deploy-frontend:
