--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -53,7 +53,8 @@ jobs:
       id: terraform
       run: |
        terraform apply -auto-approve
-       echo "CONNECTION_STRING=$(echo a)" >> $GITHUB_ENV
+       #echo "CONNECTION_STRING=$(echo a)" >> $GITHUB_ENV
+       #echo "CONNECTION_STRING=a" >> $GITHUB_ENV
        terraform output -raw connection_string
 
   build-and-deploy-frontend:
@@ -70,7 +71,10 @@ jobs:
       uses: actions/checkout@v2
       
     - name: testing
-      run: echo ${{ env.CONNECTION_STRING }}
+      run: |
+        echo ${{ env.CONNECTION_STRING }}
+        echo aaa
+        echo $CONNECTION_STRING
 
     - name: Setup Node.js for React App
       uses: actions/setup-node@v3
