--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -2,9 +2,9 @@ name: Deploy Infrastructure and Website to Azure
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+  #push:
+    #branches:
+      #- main
 
 env:
   TF_VERSION: "1.5.1"
