--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -28,4 +28,4 @@ jobs:
     steps:
     - name: testing
       run: |
-        echo ${{ needs.job1.outputs.CONNECTION_STRING }}
+        echo "${{ needs.job1.outputs.CONNECTION_STRING }}"
