--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -7,25 +7,32 @@ on:
       - main
 
 jobs:
-  job1:
+  secret-generator:
     runs-on: ubuntu-latest
-    defaults:
-     run:
-       shell: bash
     steps:
-   
-    - name: step1
-      id: s1
+    - uses: some/secret-store@v1
+      with:
+        credentials: ${{ secrets.SECRET_STORE_CREDENTIALS }}
+        instance: ${{ secrets.SECRET_STORE_INSTANCE }}
+    - name: generate secret
+      shell: bash
       run: |
-       echo "CONNECTION_STRING=a" >> "$GITHUB_OUTPUT"
-
-  job2:
-    needs: job1
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        shell: bash
+        GENERATED_SECRET=$((RANDOM))
+        echo "::add-mask::$GENERATED_SECRET"
+        SECRET_HANDLE=$(secret-store store-secret "$GENERATED_SECRET")
+        echo "handle=$secret_handle" >> "$GITHUB_OUTPUT"
+  secret-consumer:
+    runs-on: macos-latest
+    needs: secret-generator
     steps:
-    - name: testing
+    - uses: some/secret-store@v1
+      with:
+        credentials: ${{ secrets.SECRET_STORE_CREDENTIALS }}
+        instance: ${{ secrets.SECRET_STORE_INSTANCE }}
+    - name: use secret
+      shell: bash
       run: |
-        echo "${{ needs.job1.outputs.CONNECTION_STRING }}"
+        SECRET_HANDLE="${{ needs.secret-generator.outputs.handle }}"
+        RETRIEVED_SECRET=$(secret-store retrieve-secret "$SECRET_HANDLE")
+        echo "::add-mask::$RETRIEVED_SECRET"
+        echo "We retrieved our masked secret: $RETRIEVED_SECRET"
