--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -7,22 +7,22 @@ on:
       - main
 
 jobs:
-  job1:
+  secret-generator:
     runs-on: ubuntu-latest
-    # Map a step output to a job output
     outputs:
-      output1: ${{ steps.step1.outputs.test }}
-      output2: ${{ steps.step2.outputs.test }}
+      output1: ${{ steps.generate-secret.outputs.GENERATED_SECRET }}
     steps:
-      - id: step1
-        run: echo "test=hello" >> "$GITHUB_OUTPUT"
-      - id: step2
-        run: echo "test=world" >> "$GITHUB_OUTPUT"
-  job2:
-    runs-on: ubuntu-latest
-    needs: job1
+    - id: generate-secret
+      shell: bash
+      run: |
+        GENERATED_SECRET=$((RANDOM))
+        echo "handle=$GENERATED_SECRET" >> "$GITHUB_OUTPUT"
+  secret-consumer:
+    runs-on: macos-latest
+    needs: secret-generator
     steps:
-      - env:
-          OUTPUT1: ${{needs.job1.outputs.output1}}
-          OUTPUT2: ${{needs.job1.outputs.output2}}
-        run: echo "$OUTPUT1 $OUTPUT2"
+    - name: use secret
+      shell: bash
+      run: |
+        SECRET_HANDLE="${{ needs.secret-generator.outputs.handle }}"
+        echo "We retrieved our masked secret: $SECRET_HANDLE"
