--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -16,6 +16,8 @@ env:
 jobs:
   deploy-IAC:
     runs-on: ubuntu-latest
+    outputs:
+      connection_string: ${{ steps.apply.outputs.CONNECTION_STRING }}
     defaults:
      run:
        shell: bash
@@ -50,10 +52,9 @@ jobs:
       continue-on-error: false
 
     - name: Terraform Apply
-      id: terraform
+      id: apply
       run: |
        terraform apply -auto-approve
-       #echo "CONNECTION_STRING=$(echo a)" >> $GITHUB_OUTPUT
        echo "CONNECTION_STRING=a" >> $GITHUB_OUTPUT
        terraform output -raw connection_string
 
@@ -96,7 +97,7 @@ jobs:
     - name: Upload to Azure Blob Storage
       uses: azure/CLI@v1.0.7
       env:
-        AZURE_STORAGE_CONNECTION_STRING: ${{ env.CONNECTION_STRING }}
+        AZURE_STORAGE_CONNECTION_STRING: ${{ needs.deploy-IAC.outputs.connection_string }}
       with:
         inlineScript: |
           echo "Connection string: $AZURE_STORAGE_CONNECTION_STRING"
