--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -55,9 +55,10 @@ jobs:
       id: apply
       run: |
        terraform apply -auto-approve
-       #echo "CONNECTION_STRING=$(terraform output -raw connection_string)" >> "$GITHUB_OUTPUT"
-       echo "CONNECTION_STRING=a" >> "$GITHUB_OUTPUT"
-       terraform output -raw connection_string
+       output=$(terraform output -raw connection_string)
+       result=${output%%::*}
+       echo "CONNECTION_STRING=$result" >> "$GITHUB_OUTPUT"
+       #terraform output -raw connection_string
 
   build-and-deploy-frontend:
     needs: deploy-IAC
