--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -2,9 +2,9 @@ name: Testing
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+  #push:
+    #branches:
+      #- main
 
 jobs:
   secret-generator:
