--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -55,10 +55,9 @@ jobs:
       id: apply
       run: |
         terraform apply -auto-approve
-        output=$(terraform output -json | grep -Pv '^\[command]' | sed -n '/{/,$p')
+        output=$(terraform output -raw | grep -Pv '^\[command]')
         echo "Output: $output"
-        connection_string=$(echo $output | jq -r .connection_string.value)
-        echo "CONNECTION_STRING=$connection_string" >> "$GITHUB_OUTPUT"
+        echo "CONNECTION_STRING=$output" >> "$GITHUB_OUTPUT"
         #terraform output -raw connection_string
 
   build-and-deploy-frontend:
