--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -55,7 +55,7 @@ jobs:
       id: apply
       run: |
         terraform apply -auto-approve
-        output=$(terraform output -raw | grep -Pv '^\[command]')
+        output=$(terraform output -raw connection_string | grep -Pv '^\[command]')
         echo "Output: $output"
         echo "CONNECTION_STRING=$output" >> "$GITHUB_OUTPUT"
         #terraform output -raw connection_string
