--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -55,8 +55,10 @@ jobs:
       id: apply
       run: |
         terraform apply -auto-approve
-        output=$(terraform output -raw connection_string | grep -Pv '^\[command]')
+        output=$(terraform output -raw connection_string | grep -Pv '^\[command]' | )
         echo "Output: $output"
+        result=${output%%::*}
+        echo "Result: $result"
         echo "CONNECTION_STRING=$output" >> "$GITHUB_OUTPUT"
         #terraform output -raw connection_string
 
