--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -57,10 +57,7 @@ jobs:
         terraform apply -auto-approve
         output=$(terraform output -raw connection_string | grep -Pv '^\[command]' | sed 's/::debug::Terraform exited with code 0.//g')
         echo "Output: $output"
-        #result=${output%%::*}
-        #echo "Result: $result"
-        echo "CONNECTION_STRING=$output" >> "$GITHUB_OUTPUT"
-        #terraform output -raw connection_string
+        echo "CONNECTION_STRING=a" >> "$GITHUB_OUTPUT"
 
   build-and-deploy-frontend:
     needs: deploy-IAC
