--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -57,7 +57,7 @@ jobs:
         terraform apply -auto-approve
         output=$(terraform output -raw connection_string | grep -Pv '^\[command]' | sed 's/::debug::Terraform exited with code 0.//g')
         echo "Output: $output"
-        echo "CONNECTION_STRING=a" >> "$GITHUB_OUTPUT"
+        echo "CONNECTION_STRING=${output}" >> "$GITHUB_OUTPUT"
 
   build-and-deploy-frontend:
     needs: deploy-IAC
