--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -56,14 +56,16 @@ jobs:
       run: |
         terraform apply -auto-approve
         final="DefaultEndpointsProtocol=https;AccountName=mbcrcstorage;AccountKey=XxQnJbmOrKcr0XemXV58svhb+03eLIQCTpkvTBx5m6CuXnmKEjdyHfLuROfnP56bMWx37k1/Vxqr+AStz1m0Vw==;EndpointSuffix=core.windows.net"
-        output=$(terraform output -raw connection_string | grep -Pv '^\[command]' | sed 's/::debug::Terraform exited with code 0.//g')
+        preoutput=$(terraform output -raw connection_string | grep -Pv '^\[command]' | sed 's/::debug::Terraform exited with code 0.//g')
+        output=$(echo $output | tr -d '\n') 
         echo "Output: $output"
+        echo "Final: $final"
         if [ $output == $final ]; then
           echo "Strings are equal"
         else
           echo "Strings are not equal"
         fi
-        echo "handle=$final" >> "$GITHUB_OUTPUT"
+        echo "handle=$output" >> "$GITHUB_OUTPUT"
 
   build-and-deploy-frontend:
     needs: deploy-IAC
