--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -21,7 +21,7 @@ jobs:
     defaults:
      run:
        shell: bash
-       working-directory: ./IAC
+       working-directory: ./IAC/website
     steps:
     - name: Checkout
       uses: actions/checkout@v2
