--- a/.github/workflows/website-deploy.yaml
+++ b/.github/workflows/website-deploy.yaml
@@ -2,9 +2,9 @@ name: Deploy website IAC and content to Azure
 
 on:
   workflow_dispatch:
-  #push:
-    #branches:
-      #- main
+  push:
+    branches:
+      - main
 
 env:
   TF_VERSION: "1.5.1"
