--- a/.github/workflows/visitors-functions-deploy.yaml
+++ b/.github/workflows/visitors-functions-deploy.yaml
@@ -14,6 +14,10 @@ env:
 jobs:
   build-and-deploy-functions:
     runs-on: ubuntu-latest
+    needs: build-and-deploy-functions
+    defaults:
+      run:
+        working-directory: ./tests/api
     environment: dev
     steps:
     - name: 'Checkout GitHub Action'
